# pymonit

./: pyproject.toml
src/pymonit/: __main__.py  app.py
src/pymonit/gui/: tasks_table.py
src/pymonit/mon/: monitor.py  threads.py
