[tool.poetry]
name = "pymonit"
version = "0.1.0"
description = ""
authors = ["isra17 <isra017@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
